added . operator functionality

--- a/Calsi.html
+++ b/Calsi.html
@@ -40,7 +40,7 @@
             </div>
             <div class="section">
                 <div class="calsi-button" id= "three">0</div>
-                <!-- <div class="calsi-button">.</div> -->
+                <div class="calsi-button">.</div>
                 <div class="calsi-button">=</div>             
             </div>
         </section>
